--- a/backend_BookView/src/main/resources/application.properties
+++ b/backend_BookView/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=backend_BookView
+
+spring.datasource.url=jdbc:mysql://localhost:3306/book_review
+spring.datasource.username= ${MySql_username}
+spring.datasource.password = ${MySql_password}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
