--- a/backend_BookView/src/main/resources/application.properties
+++ b/backend_BookView/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
+
+server.error.include-message=always
+server.error.include-binding-errors=always
