--- a/backend_BookView/src/main/resources/application.properties
+++ b/backend_BookView/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show-sql=true
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+ADMIN_PASSWORD = ${ADMIN_SECRET}
